[tool.poetry]
name = "vector-research"
version = "0.1.0"
description = ""
authors = ["Joe Cotellese <joe.cotellese@mariadb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.4"
pypdf = "^4.0.1"
nltk = "^3.8.1"
spacy = "^3.7.2"
chromadb = "^0.4.22"
lark = "^1.1.9"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
